--- a/Firefox/manifest.json
+++ b/Firefox/manifest.json
@@ -2,6 +2,7 @@
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
+  "homepage_url": "https://github.com/railduino/zeroconf-lookup",
   "version": "1.0.0",
   "icons": {
     "48": "icons/railduino-48.png",
