fixed paths in and for JSON manifests

--- a/Host-C/Makefile
+++ b/Host-C/Makefile
@@ -23,7 +23,7 @@
 #
 
 ifeq ($(OS),Windows_NT)
-  CCFLAGS += -D WIN32
+  CCFLAGS += -D__windows__
 else
   CFLAGS += -W -Wall -Wextra -Wshadow -Wstrict-prototypes -Wpointer-arith -Wcast-qual -Winline -Werror
   UNAME_S := $(shell uname -s)
@@ -59,8 +59,8 @@ debug: zeroconf_lookup
 deep: zeroconf_lookup
 	ZEROCONF_LOOKUP="verbose=9" ./zeroconf_lookup -j
 
-user: zeroconf_lookup
-	./install-manifest.sh user
+local: zeroconf_lookup
+	./install-manifest.sh local
 
 system: zeroconf_lookup
 	sudo ./install-manifest.sh system
@@ -69,9 +69,11 @@ log: zeroconf_lookup
 	tail -f /tmp/zeroconf_lookup.log
 
 uninstall:
+	rm -f ~/.mozilla/native-messaging-hosts/com.railduino.chrome.zeroconf_lookup.json
 	rm -f ~/.config/google-chrome/NativeMessagingHosts/com.railduino.chrome.zeroconf_lookup.json
 	rm -f ~/.config/chromium/NativeMessagingHosts/com.railduino.chrome.zeroconf_lookup.json
 	rm -f ~/bin/zeroconf_lookup
+	sudo rm -f /usr/lib/mozilla/native-messaging-hosts/com.railduino.chrome.zeroconf_lookup.json
 	sudo rm -f /etc/opt/chrome/native-messaging-hosts/com.railduino.chrome.zeroconf_lookup.json
 	sudo rm -f /etc/chromium/native-messaging-hosts/com.railduino.chrome.zeroconf_lookup.json
 	sudo rm -f /usr/bin/zeroconf_lookup
