--- a/Host-C/zeroconf_lookup.conf.example
+++ b/Host-C/zeroconf_lookup.conf.example
@@ -9,13 +9,13 @@
 #
 timeout=3
 #
-# Use Avahi if it's available (more precisely, avahi-browse).
+# Use Avahi if it's available.
 # Can be 0 (don't use Avahi) or 1 (use if available). Default is 1.
 #
 avahi=0
 #
 # Enable debugging if set to 1. Default is 0 (no debugging).
-# In any case the output is sent to syslog(3) USER facility.
+# The higher the number the more output is produced.
 #
 debug=1
 #
