--- a/Firefox/manifest.json
+++ b/Firefox/manifest.json
@@ -1,12 +1,17 @@
 {
   "manifest_version": 2,
+
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
+  "version": "1.0.3",
   "homepage_url": "https://github.com/railduino/zeroconf-lookup",
-  "version": "1.0.1",
+
   "icons": {
+    "16": "icons/railduino-16.png",
+    "32": "icons/railduino-32.png",
     "48": "icons/railduino-48.png",
-    "96": "icons/railduino-96.png"
+    "96": "icons/railduino-96.png",
+    "128": "icons/railduino-128.png"
   },
 
   "applications": {
