--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
 
-  "name": "com.railduino.zeroconf_lookup",
+  "name": "Railduino Zeroconf-Lookup",
   "description": "__MSG_extensionDescription__",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "homepage_url": "https://github.com/railduino/zeroconf-lookup",
   "author": "Volker Wiegand",
   "short_name": "Railduino",
