added Linux top level make targets

--- a/Host-C/Makefile
+++ b/Host-C/Makefile
@@ -30,7 +30,15 @@ clean:
 Linux:
 	mkdir -p Linux
 	rm -rf Linux/*
-	cd Linux && cmake .. -G "Unix Makefiles"
+	cd Linux && cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr .. -G "Unix Makefiles"
 	cd Linux && make
-	echo $(OS)
+
+Linux-uninstall: Linux
+	cd Linux && ./zeroconf_lookup -u && sudo ./zeroconf_lookup -u
+
+Linux-install-user: Linux
+	cd Linux && make install && ./zeroconf_lookup -i
+
+Linux-install-system: Linux
+	cd Linux && sudo make install && /usr/bin/zeroconf_lookup -i
 
