common build dir for all systems

--- a/Host-C/.gitignore
+++ b/Host-C/.gitignore
@@ -14,7 +14,5 @@ Ignore Windows executables
 *.swp
 
 # Ignore CMake build directories
-Linux/[A-Za-z0-9]*
-Windows/[A-Za-z0-9]*
-Apple/[A-Za-z0-9]*
+build
 
